--- a/index.html
+++ b/index.html
@@ -20,27 +20,28 @@
             width: 100%;
             height: 100%;
             overflow: hidden;
-            background: radial-gradient(circle, #0f0c29, #302b63, #24243e);
+            background: black;
             font-family: 'Orbitron', sans-serif;
         }
-        @keyframes backgroundPulse {
-            0% {background-position: 0% 50%;}
-            50% {background-position: 100% 50%;}
-            100% {background-position: 0% 50%;}
-        }
-        @keyframes starfield {
-            from {transform: translateY(0);}
-            to {transform: translateY(-1000px);}
-        }
-        .starfield {
+        .background-animation {
             position: absolute;
-            width: 200%;
-            height: 200%;
-            background: radial-gradient(white 1px, transparent 1px), radial-gradient(white 1px, transparent 1px);
-            background-size: 50px 50px;
-            background-position: 0 0, 25px 25px;
-            animation: starfield 60s linear infinite;
-            opacity: 0.3;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            mix-blend-mode: screen;
+        }
+        .logo-background {
+            position: absolute;
+            top: 5vh;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 50vw;
+            max-width: 800px;
+            opacity: 0.15;
+            filter: drop-shadow(0 0 60px white);
+            z-index: 2;
         }
         .title-text {
             position: absolute;
@@ -51,7 +52,7 @@
             color: transparent;
             -webkit-text-stroke: 3px #00ffea;
             text-shadow: 0 0 40px #00ffea;
-            z-index: 2;
+            z-index: 3;
             transition: transform 0.5s ease;
         }
         .click-text {
@@ -63,7 +64,7 @@
             color: #ff0080;
             text-shadow: 0 0 20px #ff0080;
             animation: pulse 2s infinite;
-            z-index: 2;
+            z-index: 3;
         }
         @keyframes pulse {
             0%, 100% {opacity: 1;}
@@ -74,7 +75,7 @@
             top: 40vh;
             left: 50%;
             transform: translateX(-50%) scale(1);
-            z-index: 3;
+            z-index: 4;
             transition: transform 0.5s ease;
         }
         .whale-img {
@@ -84,22 +85,13 @@
             filter: drop-shadow(0px 0px 40px #ff0080);
             transition: transform 0.5s ease;
         }
-        canvas {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 1;
-            mix-blend-mode: screen;
-        }
     </style>
 </head>
 <body>
-    <div class="starfield"></div>
-    <canvas id="eqCanvas"></canvas>
+    <canvas id="backgroundCanvas" class="background-animation"></canvas>
+    <img class="logo-background" src="https://static1.squarespace.com/static/52efe2bbe4b0e9a106d09265/t/52efe751e4b0eb698895bda9/1604071142843/" alt="WHALERS Logo Background">
     <div class="title-text" id="titleText">WHALERS</div>
-    <div class="click-text">✨ Click the Whale to Play "Tremors" ✨</div>
+    <div class="click-text">Click the Whale to Play "Tremors"</div>
     <div class="whale-container" id="whaleContainer">
         <img class="whale-img" id="whaleImg" src="https://raw.githubusercontent.com/dmsatx357/whalers-test/main/whale%20outline.png" alt="Whale" onclick="triggerEffects()">
     </div>
@@ -108,11 +100,9 @@
     <script>
         const audioPlayer = document.getElementById('audioPlayer');
         const whaleContainer = document.getElementById('whaleContainer');
-        const whaleImg = document.getElementById('whaleImg');
         const titleText = document.getElementById('titleText');
-        const canvas = document.getElementById('eqCanvas');
+        const canvas = document.getElementById('backgroundCanvas');
         const ctx = canvas.getContext('2d');
-        const starfield = document.querySelector('.starfield');
 
         function resizeCanvas() {
             canvas.width = window.innerWidth;
@@ -123,7 +113,7 @@
 
         const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
         const analyser = audioCtx.createAnalyser();
-        analyser.fftSize = 2048;
+        analyser.fftSize = 256;
         const bufferLength = analyser.frequencyBinCount;
         const dataArray = new Uint8Array(bufferLength);
 
@@ -131,49 +121,23 @@
         source.connect(analyser);
         analyser.connect(audioCtx.destination);
 
-        function explosionEffect() {
-            let particles = [];
-            for (let i = 0; i < 100; i++) {
-                particles.push({
-                    x: canvas.width / 2,
-                    y: canvas.height / 2,
-                    radius: Math.random() * 5 + 1,
-                    color: `hsl(${Math.random() * 360}, 100%, 50%)`,
-                    velocityX: (Math.random() - 0.5) * 10,
-                    velocityY: (Math.random() - 0.5) * 10
-                });
-            }
-
-            function animateParticles() {
-                ctx.clearRect(0, 0, canvas.width, canvas.height);
-                particles.forEach((p, index) => {
-                    ctx.beginPath();
-                    ctx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
-                    ctx.fillStyle = p.color;
-                    ctx.fill();
-                    p.x += p.velocityX;
-                    p.y += p.velocityY;
-                    p.radius *= 0.95;
-                    if (p.radius < 0.1) particles.splice(index, 1);
-                });
-                if (particles.length > 0) requestAnimationFrame(animateParticles);
-            }
-            animateParticles();
-        }
-
-        function crazyVisuals() {
-            requestAnimationFrame(crazyVisuals);
+        function fullBackgroundEQ() {
+            requestAnimationFrame(fullBackgroundEQ);
             analyser.getByteFrequencyData(dataArray);
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
+            const barWidth = (canvas.width / bufferLength) * 2.5;
+            let x = 0;
+
             for (let i = 0; i < bufferLength; i++) {
-                const val = dataArray[i];
-                const percent = val / 256;
-                const height = canvas.height * percent;
-                const offset = canvas.height - height - 1;
-                const barWidth = canvas.width / bufferLength;
-                ctx.fillStyle = `hsl(${Math.round(percent * 360)}, 100%, 50%)`;
-                ctx.fillRect(i * barWidth, offset, barWidth, height);
+                const barHeight = dataArray[i] * 2;
+                const r = barHeight + (25 * (i / bufferLength));
+                const g = 250 * (i / bufferLength);
+                const b = 50;
+
+                ctx.fillStyle = `rgb(${r},${g},${b})`;
+                ctx.fillRect(x, canvas.height - barHeight, barWidth, barHeight);
+                x += barWidth + 1;
             }
         }
 
@@ -181,27 +145,21 @@
             if (audioPlayer.paused) {
                 audioCtx.resume();
                 audioPlayer.play();
-                document.body.style.animation = "backgroundPulse 10s infinite alternate";
-                starfield.style.animation = "starfield 30s linear infinite";
                 whaleContainer.style.transform = "translateX(-50%) scale(1.5) rotate(720deg)";
                 titleText.style.transform = "scale(1.5) rotate(-10deg)";
-                explosionEffect();
-                crazyVisuals();
+                fullBackgroundEQ();
             } else {
                 audioPlayer.pause();
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
                 whaleContainer.style.transform = "translateX(-50%) scale(1)";
                 titleText.style.transform = "scale(1)";
-                starfield.style.animation = "none";
             }
         }
 
         audioPlayer.addEventListener('ended', () => {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
-            document.body.style.animation = "none";
             whaleContainer.style.transform = "translateX(-50%) scale(1)";
             titleText.style.transform = "scale(1)";
-            starfield.style.animation = "none";
         });
     </script>
 </body>
